Changelog
=========

2.0.dev0 - (unreleased)
-----------------------
* Change: updated URLs pointing to eea.europa.eu with https://
  [alecghica refs #95849]

1.9 - (2017-12-12)
------------------
* Change: Replace eeacms/zptlint with eeacms/plone-test:4 zptlint
  [avoinea refs #90415]

1.8 - (2017-09-26)
------------------
* bugfix in javascript
  [valipod refs #88020]

1.7 - (2017-09-15)
------------------
* bugfix in javascript
  [valipod refs #88020]

1.6 - (2017-08-16)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for EEA Similarity
  [valipod refs #84915]
* the similarity check is now available on edit pages
  [valipod refs #85448]
* the similarity threshold can be passed as parameter
  [valipod refs #85448]
* added possibility to turn on check for all content types
  [valipod refs #85448]
* button to request the similarity check manually
  [valipod refs #85448]
* suggest popup appears even if there are now suggestions (different message)
  [valipod refs #85448]
* integrated the suggest popup also for indicators aggregated edit
  [valipod refs #85448]

1.5 - (2017-05-22)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for EEA Similarity
  [avoinea refs #84915]
* Change: Add dedicated async quota for similarity jobs
  [avoinea refs #84915]
* Change: fixed PyLint warnings and errors
  [valipod refs #84949]

1.4 - (2017-04-24)
------------------
* Feature: add control panel option to show suggestions only after a certain
  title length
  [valipod refs #84480]
* Change: updated package information
  [eduard-fironda]

1.3 - (2017-04-19)
------------------
* Bug fix: fixed issue with the equivalent sets
  [valipod refs #84294]
* Feature: added metadata info to the suggestion dialog
  [valipod refs #84294]

1.2 - (2017-04-14)
------------------
* Bug fix: Remove hard dependency on plone.app.async and eea.versions
  [avoinea refs #83163]