@@ -3,6 +3,8 @@ Changelog
 
 2.0.dev0 - (unreleased)
 -----------------------
+* Change: Use logger.warn for expected exceptions
+  [avoinea refs #96835]
 * Change: updated URLs pointing to eea.europa.eu with https://
   [alecghica refs #95849]
 
